# LiteERP

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  ARCHITECTURE_apk.md  ARCHITECTURE_forSQL.md  ARCHITECTURE_voice_agent.md  README.md  START-LITEERP.bat  capacitor.config.ts  docker-compose.yml  package.json  pnpm-lock.yaml  quanlybanhang.md  rule.md  rule.vi.md  tsconfig.base.json
.build-out/: better_sqlite3.node
.github/workflows/: build-apk.yml  ci.yml
android/: capacitor.settings.gradle  keystore.properties.example
android/app/: build.gradle  proguard-rules.pro
apps/api/: .eslintrc.json  README.md  jest.config.js  package.json  tsconfig.build.json  tsconfig.json
apps/mobile/: local.properties  settings.gradle.kts
apps/mobile/app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
apps/mobile/app/src/main/: AndroidManifest.xml
apps/mobile/app/src/main/cpp/: native-lib.cpp
apps/mobile/app/src/main/java/com/liteerp/app/: ApiWaiter.kt  MainActivity.kt  NodeBridge.kt  PayloadInstaller.kt
apps/mobile/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/mobile/app/src/main/res/layout/: activity_main.xml
apps/mobile/app/src/main/res/values/: strings.xml  themes.xml
apps/mobile/app/src/main/res/xml/: network_security_config.xml
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.ts
docker/nginx/: nginx.conf
docs/: DRIVE_SETUP.md
payload/api/: Dockerfile  (+4 more)
scripts/: build-better-sqlite3-android.sh  build-payload.sh  build-sqlite3-android.sh  dev.ps1  dev.sh  physicalize-payload.sh
www/: index.html
(+489 files in other folders)
